# scrapy-paapi

./: .flake8  README.md  pyproject.toml
scrapy_paapi/: __init__.py  constant.py  middleware.py  request.py  response.py  signer.py
tests/: test_scrapy_paapi.py
