[tool.poetry]
name = "scrapy-paapi"
version = "0.1.0"
description = ""
authors = ["orangain <orangain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
Scrapy = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}
rope = "^0.18.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
